--- a/app/src/main/res/layout/drawer_account.xml
+++ b/app/src/main/res/layout/drawer_account.xml
@@ -9,10 +9,12 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         style="@style/DrawerStyle"/>
-    <TextView
-        android:id="@+id/signin"
+
+    <Button
         android:layout_width="wrap_content"
-        style="@style/DrawerStyle"
-        android:text="@string/signin_title"
-        android:textColor="#ffffff"/>
+        android:layout_height="wrap_content"
+        android:text="Sign In"
+        android:id="@+id/accountBtn"
+        android:onClick="accountBtnClick"/>
+
 </LinearLayout>
