--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -84,6 +84,24 @@
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/more_arrow"/>
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingTop="6dp" >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/payment_cid"/>
+                <EditText
+                    android:id="@+id/payment_cid"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:imeOptions="actionDone"
+                    />
+            </LinearLayout>
+
             <!-- Billing address -->
             <LinearLayout
                 android:layout_width="match_parent"
