--- a/app/src/main/res/layout/signin_fragment.xml
+++ b/app/src/main/res/layout/signin_fragment.xml
@@ -24,7 +24,7 @@
         android:ems="10"
         android:id="@+id/password"
         android:hint="Password"
-        android:imeOptions="actionNext"
+        android:imeOptions="actionDone"
         android:singleLine="true"
         android:layout_below="@+id/username"
         android:layout_alignParentLeft="true"
