Modify UI according to the requirement

--- a/app/src/main/res/layout/sku_spec_item.xml
+++ b/app/src/main/res/layout/sku_spec_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableRow xmlns:android="http://schemas.android.com/apk/res/android">
+<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/SkuSpecFont"
+    android:padding="5dp">
     <TextView
-        android:id="@+id/name"
-        style="@style/SkuSpecNameStyle"/>
+        android:id="@+id/name"/>
     <TextView
         android:id="@+id/value"
-        style="@style/SkuSpecValueStyle"/>
+        android:paddingLeft="10dp"/>
 </TableRow>
