--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -124,15 +124,7 @@
         <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="SkuSpecStyle">
+    <style name="SkuSpecFont">
         <item name="android:textSize">16dp</item>
-    </style>
-    <style name="SkuSpecNameStyle" parent="SkuSpecStyle">
-        <item name="android:paddingLeft">2dp</item>
-        <item name="android:paddingRight">4dp</item>
-    </style>
-    <style name="SkuSpecValueStyle" parent="SkuSpecStyle">
-        <item name="android:paddingLeft">4dp</item>
-        <item name="android:paddingRight">2dp</item>
     </style>
 </resources>
