--- a/app/src/main/res/layout/sku_spec_item.xml
+++ b/app/src/main/res/layout/sku_spec_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/SkuSpecFont"
-    android:padding="5dp">
+    android:layout_width="fill_parent"
+    android:padding="10dp">
     <TextView
         android:id="@+id/name"/>
     <TextView
