--- a/app/src/main/res/layout/drawer_account.xml
+++ b/app/src/main/res/layout/drawer_account.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign In"
-        android:id="@+id/accountBtn"
-        android:onClick="accountBtnClick"/>
+        android:id="@+id/account_button"
+        android:onClick="signInBtnClick"/>
 
 </LinearLayout>
