--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -17,7 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="6dp">
+            android:padding="5dp">
+
             <!-- Photos -->
             <android.support.v4.view.ViewPager
                 android:id="@+id/images"
@@ -26,6 +27,7 @@
             <com.staples.mobile.cfa.widget.PagerStripe
                 android:id="@+id/stripe"
                 style="@style/PagerStripe"/>
+
             <!-- Info -->
             <TextView
                 android:id="@+id/title"
@@ -39,6 +41,7 @@
             <com.staples.mobile.cfa.widget.PriceSticker
                 android:id="@+id/pricing"
                 style="@style/LargePriceSticker"/>
+
             <!-- Description -->
             <LinearLayout
                 android:layout_width="match_parent"
@@ -52,7 +55,9 @@
                     android:orientation="vertical">
                     <TextView
                         style="@style/SkuSummaryHeader"
-                        android:text="@string/description"/>
+                        android:text="@string/description"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="5dp"/>
                 </LinearLayout>
                 <ImageView
                     android:id="@+id/description_detail"
@@ -62,9 +67,10 @@
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/more_arrow"/>
             </LinearLayout>
+
             <!-- Specifications -->
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <LinearLayout
@@ -75,16 +81,21 @@
                     android:orientation="vertical">
                     <TextView
                         style="@style/SkuSummaryHeader"
-                        android:text="@string/specifications"/>
+                        android:text="@string/specifications"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="5dp"/>
                 </LinearLayout>
                 <ImageView
                     android:id="@+id/specification_detail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="4dp"
                     android:layout_gravity="center_vertical"
-                    android:src="@drawable/more_arrow"/>
+                    android:src="@drawable/more_arrow"
+                    android:paddingLeft="4dp"
+                    android:paddingRight="4dp"
+                    android:paddingTop="34dp"/>
             </LinearLayout>
+
             <!-- Customer reviews -->
             <LinearLayout
                 android:layout_width="match_parent"
@@ -97,7 +108,9 @@
                     android:orientation="vertical">
                     <TextView
                         style="@style/SkuSummaryHeader"
-                        android:text="@string/reviews"/>
+                        android:text="@string/reviews"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="5dp"/>
                 </LinearLayout>
                 <ImageView
                     android:id="@+id/review_detail"
@@ -110,11 +123,11 @@
 
             <!-- Accessory List -->
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingTop="10dp"
-                android:paddingBottom="10dp">
+                android:paddingBottom="5dp">
                 <TextView
                     style="@style/SkuSummaryHeader"
                     android:text="@string/accessories"/>
