fixing delete button limiting length of qty editor text

--- a/app/src/main/res/layout/quantity_editor.xml
+++ b/app/src/main/res/layout/quantity_editor.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:inputType="number"
+        android:maxLength="4"
         android:imeOptions="actionDone"
         android:selectAllOnFocus="true"
         android:layout_marginRight="6dp"
