--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -60,14 +60,15 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:textSize="18sp"
+                android:paddingRight="6dp"
                 app:maxSpinnerValue="6"
                 />
             <Button
                 android:id="@+id/cartitem_delete"
-                android:layout_width="30dp"
+                android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_gravity="center_vertical"
-                android:text="X"
+                android:text="@string/delete"
                 android:textSize="14dp"
                 android:padding="0dp"
                 />
