Add product spec info and set dark color for even rows

--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -56,8 +56,7 @@
                     <TextView
                         style="@style/SkuSummaryHeader"
                         android:text="@string/description"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="5dp"/>
+                        android:paddingTop="10dp"/>
                 </LinearLayout>
                 <ImageView
                     android:id="@+id/description_detail"
@@ -82,8 +81,7 @@
                     <TextView
                         style="@style/SkuSummaryHeader"
                         android:text="@string/specifications"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="5dp"/>
+                        android:paddingTop="10dp"/>
                 </LinearLayout>
                 <ImageView
                     android:id="@+id/specification_detail"
@@ -110,8 +108,7 @@
                     <TextView
                         style="@style/SkuSummaryHeader"
                         android:text="@string/reviews"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="5dp"/>
+                        android:paddingTop="10dp"/>
                 </LinearLayout>
                 <ImageView
                     android:id="@+id/review_detail"
@@ -127,8 +124,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingTop="10dp"
-                android:paddingBottom="5dp">
+                android:paddingTop="10dp">
                 <TextView
                     android:id="@+id/accessory_title"
                     style="@style/SkuSummaryHeader"
