--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -63,6 +63,19 @@
                 android:paddingRight="6dp"
                 app:maxSpinnerValue="6"
                 />
+            <!--<Button-->
+                <!--android:id="@+id/cartitem_update"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="30dp"-->
+                <!--android:layout_gravity="center_vertical"-->
+                <!--android:text="@string/update_button"-->
+                <!--android:textSize="14dp"-->
+                <!--android:paddingTop="4dp"-->
+                <!--android:paddingBottom="4dp"-->
+                <!--android:paddingLeft="8dp"-->
+                <!--android:paddingRight="8dp"-->
+                <!--android:visibility="gone"-->
+                <!--/>-->
             <Button
                 android:id="@+id/cartitem_delete"
                 android:layout_width="wrap_content"
@@ -71,19 +84,6 @@
                 android:text="@string/delete"
                 android:textSize="14dp"
                 android:padding="0dp"
-                />
-            <Button
-                android:id="@+id/cartitem_update"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_gravity="center_vertical"
-                android:text="@string/update_button"
-                android:textSize="14dp"
-                android:paddingTop="4dp"
-                android:paddingBottom="4dp"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                android:visibility="gone"
                 />
         </LinearLayout>
     </LinearLayout>
