--- a/app/src/main/res/layout/quantity_editor.xml
+++ b/app/src/main/res/layout/quantity_editor.xml
@@ -5,7 +5,8 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginRight="6dp">
     <Spinner
         android:id="@+id/cartitem_qty_spinner"
         android:layout_width="wrap_content"
@@ -21,7 +22,6 @@
         android:maxLength="4"
         android:imeOptions="actionDone"
         android:selectAllOnFocus="true"
-        android:layout_marginRight="6dp"
         android:textSize="18sp"
         android:visibility="gone"
         />
