--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -130,11 +130,10 @@
                     style="@style/SkuSummaryHeader"
                     android:text="@string/accessories"/>
                 <HorizontalScrollView
-                    android:id="@+id/accessoryScrollView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <LinearLayout
-                        android:id="@+id/accessory"
+                        android:id="@+id/accessoryContainer"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
