--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -21,15 +21,17 @@
         <!-- ActionBar -->
         <LinearLayout
               android:layout_width="match_parent"
-              android:layout_height="@dimen/icon_width"
+              android:layout_height="56dp"
               android:orientation="horizontal"
               android:animateLayoutChanges="true"
-              android:background="#00ff00">
+              android:background="@color/staples_light">
             <ImageView
                 android:id="@+id/action_left_drawer"
-                android:layout_width="@dimen/icon_width"
+                android:layout_width="48dp"
                 android:layout_height="match_parent"
                 android:gravity="center"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:src="@drawable/ic_drawer"/>
             <ImageView
                 android:id="@+id/action_home"
