--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <color name="staples_dark">#b30000</color>
+    <color name="staples_light">#cc0000</color>
 	<color name="text_black">#000000</color>
 	<color name="text_light_gray">#BEC0BB</color>
 	<color name="text_orange_light">#FFA080</color>
