--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -156,7 +156,7 @@
             />
     </RelativeLayout>
 
-    <!-- shipping -->
+    <!-- shipping charge -->
     <RelativeLayout
         android:id="@+id/co_shipping_layout"
         android:layout_width="match_parent"
