--- a/app/src/main/res/layout/personal_feed.xml
+++ b/app/src/main/res/layout/personal_feed.xml
@@ -30,7 +30,7 @@
         <ListView
             android:id="@+id/product_list"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             android:padding="10dp"/>
     </LinearLayout>
 
