--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -12,14 +12,35 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/checkout_title"
-        android:layout_width="match_parent"
-        style="@style/CartHeader"
-        android:textSize="24sp"
-        android:text="@string/checkout_title"/>
+        <!--<TextView-->
+            <!--android:layout_width="match_parent"-->
+            <!--style="@style/CartHeader"-->
+            <!--android:textSize="24sp"-->
+            <!--android:text="@string/checkout_title"/>-->
 
-    <!-- scrollable contents -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        style="@style/CartHeader">
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            style="@style/CartHeader"
+            android:textSize="24sp"
+            android:text="@string/checkout_title"
+        />
+        <Button
+            android:id="@+id/signin_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/signin_title"
+            android:visibility="gone"
+            android:onClick="signInBtnClick"/>
+    </LinearLayout>
+
+<!-- scrollable contents -->
     <ScrollView
         android:id="@+id/checkout_entry_layout"
         android:layout_width="match_parent"
