more progress on guest checkout

--- a/app/src/main/res/layout/checkout_guest_entry.xml
+++ b/app/src/main/res/layout/checkout_guest_entry.xml
@@ -53,4 +53,13 @@
            />
     </LinearLayout>
 
+    <!--temporary button-->
+    <Button
+        android:id="@+id/temp_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fake above entry"/>
+
+
+
 </LinearLayout>
