--- a/app/src/main/res/layout/personal_feed_product_item.xml
+++ b/app/src/main/res/layout/personal_feed_product_item.xml
@@ -1,31 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="horizontal">
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="@dimen/image_square_size"
-        android:layout_height="@dimen/image_square_size"
-        android:layout_marginRight="6dp"/>
+
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="left|center_vertical">
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginRight="10dp"/>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:textSize="16sp"
-            android:text="test"/>
-        <com.staples.mobile.cfa.widget.RatingStars
-            android:id="@+id/rating"
-            style="@style/SmallRatingStars"/>
-        <com.staples.mobile.cfa.widget.PriceSticker
-            android:id="@+id/pricing"
-            style="@style/SmallPriceSticker"/>
+            android:orientation="vertical"
+            android:layout_gravity="left|center_vertical">
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:textSize="16sp"/>
+            <com.staples.mobile.cfa.widget.RatingStars
+                android:id="@+id/rating"
+                style="@style/SmallRatingStars"/>
+            <com.staples.mobile.cfa.widget.PriceSticker
+                android:id="@+id/pricing"
+                style="@style/SmallPriceSticker"/>
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:adjustViewBounds="true"
+        android:src="@drawable/more_arrow"/>
+</RelativeLayout>
 
