--- a/app/src/main/res/layout/checkout_guest_entry.xml
+++ b/app/src/main/res/layout/checkout_guest_entry.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:hint="@string/reenter_email"
-        android:imeOptions="actionNext"
+        android:imeOptions="actionDone"
         android:singleLine="true"/>
 
 
@@ -63,18 +63,6 @@
 
     </LinearLayout>
 
-    <!--temporary button-->
-    <Button
-        android:id="@+id/temp_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Use entered addresses"/>
-    <Button
-        android:id="@+id/temp_fake_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Use fake addresses"/>
 
     <!-- billing address (visible when different from shipping address) -->
     <LinearLayout
@@ -94,5 +82,22 @@
 
     </LinearLayout>
 
+    <!--temporary buttons-->
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/temp_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Use entered"/>
+        <Button
+            android:id="@+id/temp_fake_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Use fake"/>
+    </LinearLayout>
 
 </LinearLayout>
