--- a/app/src/main/res/layout/personal_feed.xml
+++ b/app/src/main/res/layout/personal_feed.xml
@@ -31,6 +31,7 @@
             android:id="@+id/product_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="10dp"
             android:paddingLeft="10dp"/>
     </LinearLayout>
 </com.staples.mobile.cfa.widget.DataWrapper>
