--- a/app/src/main/res/layout/personal_feed_product_item.xml
+++ b/app/src/main/res/layout/personal_feed_product_item.xml
@@ -14,7 +14,9 @@
             android:id="@+id/image"
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"/>
 
         <LinearLayout
             android:layout_width="fill_parent"
