--- a/app/src/main/res/layout/store_fragment.xml
+++ b/app/src/main/res/layout/store_fragment.xml
@@ -6,7 +6,8 @@
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Search field placeholder"/>
+        android:padding="6dp"
+        android:hint="Search field placeholder"/>
     <com.google.android.gms.maps.MapView
         android:id="@+id/map"
         android:layout_width="fill_parent"
@@ -17,5 +18,5 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="6dp"
-        android:textSize="20dp"/>
+        android:textSize="18dp"/>
 </com.staples.mobile.cfa.widget.AnimatorLayout>
