--- a/app/src/main/res/layout/addcc_fragment.xml
+++ b/app/src/main/res/layout/addcc_fragment.xml
@@ -24,6 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/expirationMonth"
+        android:inputType="number"
+        android:maxLength="2"
         android:hint="EXP MM"
         android:layout_below="@+id/cardNumber"
         android:layout_alignParentLeft="true"
@@ -34,6 +36,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/expirationYear"
+        android:inputType="number"
+        android:maxLength="4"
         android:hint="EXP YYYY"
         android:layout_below="@+id/cardNumber"
         android:layout_toRightOf="@+id/expirationMonth"
