--- a/app/src/main/res/layout/addcc_fragment.xml
+++ b/app/src/main/res/layout/addcc_fragment.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/cardNumber"
         android:hint="Card Number"
+        android:inputType="number"
         android:layout_below="@+id/card_type_spinner"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
