--- a/app/src/main/res/layout/checkout_guest_entry.xml
+++ b/app/src/main/res/layout/checkout_guest_entry.xml
@@ -45,7 +45,7 @@
 
     <EditText
         android:id="@+id/cid"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="number"
         android:maxLength="4"
@@ -117,7 +117,7 @@
             android:id="@+id/temp_fake_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Use fake"/>
+            android:text="Use fake addresses"/>
     </LinearLayout>
 
 </LinearLayout>
