fixing keyboard button to have Done key for password field of user registration

--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -39,7 +39,7 @@
         android:ems="10"
         android:id="@+id/passwordRegister"
         android:hint="Password"
-        android:imeOptions="actionNext"
+        android:imeOptions="actionDone"
         android:singleLine="true"
         android:layout_below="@+id/userNameRegister"
         android:layout_alignParentLeft="true"
