--- a/app/src/main/res/layout/store_fragment.xml
+++ b/app/src/main/res/layout/store_fragment.xml
@@ -13,10 +13,8 @@
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:padding="6dp"
-        android:textSize="18dp"/>
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </com.staples.mobile.cfa.widget.AnimatorLayout>
